# geo-mesh

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
data/shaders/: terrain.fs.glsl  terrain.tcs.glsl  terrain.tes.glsl  terrain.vs.glsl  text.vs.glsl
src/: main.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.h  AssetManager_font.cpp  AssetManager_shader.cpp  AssetManager_texture.cpp
src/Common/: Types.h
src/Core/: Mesh.cpp  Mesh.h  Mesh2D.cpp  Mesh2D.h  Mesh2DBuffer.cpp  Mesh2DBuffer.h  MeshBuffer.cpp  MeshBuffer.h  Texture.cpp  Texture.h
src/Engine/: Engine.cpp  Engine.h  GLFWIntegration.cpp  GLFWIntegration.h
src/Graphics/: Camera.h  Shader.h
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Input/: Input.cpp  Input.h
src/Navigator/: Navigator.cpp  Navigator.h
src/Renderer/: Renderer.cpp  Renderer.h  Renderer_imgui_pass.cpp  Renderer_terrain_pass.cpp  Renderer_text_pass.cpp
src/Settings/: Settings.cpp  Settings.h  Settings_terrain.cpp
src/Terrain/: Terrain.cpp  Terrain.h
src/UI/: TextUI.cpp  TextUI.h
src/World/: World.cpp  World.h
